k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
      - name: news-service
        image: ghcr.io/impit-mpit/news-service-master:latest
        ports:
        - containerPort: 3001
          name: grpc
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: news-service
spec:
  selector:
    app: news-service
  ports:
  - port: 3001
    targetPort: 3001
    name: grpc
