k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: news-service
spec:
  hosts:
  - news-service
  http:
  - match:
    - uri:
        prefix: /news.NewsService
    route:
    - destination:
        host: news-service
        port:
          number: 3001
